catkin_ws/logs/frontend/build.make.024.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/RosHandler.cpp: In constructor ‘RosHandler::RosHandler()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/RosHandler.cpp:18:61: error: ‘Mission’ has not been declared
  _state_sub   = _nh.subscribe("/px4_offboard/state",  10,  &Mission::stateCallback, this);
                                                             ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/RosHandler.cpp:30:2: error: ‘_is_calibrate’ was not declared in this scope
  _is_calibrate = 0;
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:314:1: warning: multi-line comment [-Wcomment]
 //    cv::drawMatches(frame1.getGray(),frame1.getKeypoints(),frame2.getGray(),frame2.getKeypoints(), matches, \
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/ObjDetection.cpp: In member function ‘void ObjDetection::objectDetect()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/ObjDetection.cpp:69:44: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for( int i = 0; i < backward_matches.size(); i++ ) // symmetry test
                                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/ObjDetection.cpp:72:44: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int j = 0; j < forward_matches.size();j++)
                                            ^
make[2]: *** [CMakeFiles/SLAM.dir/src/RosHandler.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:280:14: warning: unused variable ‘logName’ [-Wunused-variable]
  static char logName [50];
              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:514:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::fusePX4LPE(int)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:869:20: warning: variable ‘keyTm’ set but not used [-Wunused-but-set-variable]
    Eigen::Matrix4d keyTm = prevKey.matrix().inverse()*currentPosition.matrix();
                    ^
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
